Fix invisible-xs (was hiding things when greater than xs)

--- a/client/web/client.less
+++ b/client/web/client.less
@@ -32,13 +32,13 @@ html {
     visibility: hidden;
   }
 
-  .visible-xs {
-    display: block;
-    visibility: visible;
-  }
-
   @media screen and (min-width: 48em){
     font-size: 16px;
+
+    .invisible-xs {
+      display: block;
+      visibility: visible;
+    }
 
     .invisible-sm {
       display: none;
